Ensure jinja is used at the end of task's name
  This should fix "Jinja templates should only be at the end of 'name'"
from ansible-lint, triggered by a GitHub action.

  For more details please see:

  * https://github.com/juju4/ansible-MISP/actions/runs/3941101819/jobs/6815291097

--- a/tasks/misp-key-file.yml
+++ b/tasks/misp-key-file.yml
@@ -10,7 +10,7 @@
 - name: Key file
   when: not skey.stat.exists or skey.stat.size == 0
   block:
-    - name: Replace default MISP admin by "{{ misp_web_user }}" before running userInit
+    - name: Replace default MISP admin by "{{ misp_web_user }}"
       ansible.builtin.replace:
         dest: "{{ d }}"
         regexp: 'admin@admin.test'
