--- a/tasks/misp-key-file.yml
+++ b/tasks/misp-key-file.yml
@@ -10,7 +10,7 @@
 - name: Key file
   when: not skey.stat.exists or skey.stat.size == 0
   block:
-    - name: Replace default MISP admin by "{{ misp_web_user }}"
+    - name: "Replace default MISP admin by {{ misp_web_user }}"
       ansible.builtin.replace:
         dest: "{{ d }}"
         regexp: 'admin@admin.test'
@@ -22,6 +22,7 @@
         - "{{ misp_rootdir }}/app/Model/User.php"
       loop_control:
         loop_var: d
+      when: misp_web_user != 'admin@admin.test'
     - name: Generate key file - cake userInit
       ansible.builtin.shell: "{{ misp_rootdir }}/app/Console/cake userInit -q | tee {{ misp_key_file }}"
       args:
