--- a/vars/Ubuntu-22.04.yml
+++ b/vars/Ubuntu-22.04.yml
@@ -120,7 +120,7 @@ mispmodules_libyarapath: /usr/local/lib/python3.10/dist-packages/usr/lib
 
 apacheetc: /etc/apache2
 ssl_user: ssl-cert
-ssl_dir: /etc/ssl
+ssl_dir: /etc/ssl/certs
 ssl_privatedir: /etc/ssl/private
 
 supervisor_conf: /etc/supervisor/supervisord.conf
