Set 'misp_webserver_harden' to handle hardening
  * This variable has its default value set to 'true';
  * Value can be changed in a playbook, while applying the role.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,7 @@ misp_modules_enable: true
 mispmodules_rootdir: /opt
 misp_webserver: 'apache2'
 # misp_webserver: 'nginx'
+misp_webserver_harden: true
 misp_fcgi_enable: false
 misp_lief_enable: true
 misp_lief_rootdir: /var/lief
