Add missing php script into the replacements loop
  * After PR!13 landed into the tree, we realized there's a missing php
    script that can also be target for replacing "misp_web_user";
  * This commit add that script and shall fix it.

--- a/tasks/misp-key-file.yml
+++ b/tasks/misp-key-file.yml
@@ -19,6 +19,7 @@
         owner: "{{ www_user }}"
         group: "{{ www_user }}"
       loop:
+        - "{{ misp_rootdir }}/app/Console/Command/Ls22Shell.php"
         - "{{ misp_rootdir }}/app/Model/User.php"
       loop_control:
         loop_var: d
