--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -7,21 +7,19 @@ on:
   push:
     tags:
       - '*'
+
+permissions: {}
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: juju4.MISP
-  release:
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
       - name: galaxy
-        uses: robertdebock/galaxy-action@1.1.1
+        uses: robertdebock/galaxy-action@1.2.1
         with:
           galaxy_api_key: ${{ secrets.galaxy_api_key }}
           path: juju4.MISP
