ci: disable misp-modules for kitchen default

--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -3,6 +3,7 @@
 - name: Test playbook
   hosts: all
   vars:
+    misp_modules_enable: true
     misp_pymisp_validation_fatal: false
     # need pymisp
     misp_enable_feeds: []
