--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -27,6 +27,10 @@
       when: >
         (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 16) or
         (ansible_os_family == "RedHat" and ansible_distribution_major_version | int >= 8)
+    - name: 22.04 | Set fact
+      ansible.builtin.set_fact:
+        misp_modules_enable: false
+      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 22)
   vars:
     misp_pymisp_validation_fatal: false
     # need pymisp
