composer: set prefer_dist=true to follow upstream
  * should you read the help/usage message of composer, it provides
    information about its sane defaults; one of them is to prefer "dist"
    instead of "source" for installation (and related) commands.

--- a/tasks/background-jobs.yml
+++ b/tasks/background-jobs.yml
@@ -49,6 +49,7 @@
     working_dir: "{{ misp_rootdir }}/app"
     executable: "{{ php_bin | default(omit) }}"
     no_plugins: true
+    prefer_dist: true
   register: pkg_result
   until: pkg_result is success
   become: yes
