fix(meta): remove redhat_epel permanent dependency

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -28,10 +28,4 @@ galaxy_info:
     - security
     - threatintelligence
     - informationsharing
-dependencies:
-  - role: juju4.redhat_epel
-  ## eventual dependencies for fine tuning but integration needed
-  # - role: geerlingguy.mysql
-  ## one or the other?
-  # - role: geerlingguy.nginx
-  # - role: geerlingguy.apache
+dependencies: []
