--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -52,6 +52,7 @@
         misp_modules_enable: false
       when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 22)
   roles:
+    - { role: juju4.redhat_epel, when: ansible_os_family == 'RedHat' }
     # - geerlingguy.apache
     - juju4.harden_apache
     - juju4.faup
