--- a/tasks/redhat-remi.yml
+++ b/tasks/redhat-remi.yml
@@ -20,25 +20,11 @@
   register: pkg_result
   until: pkg_result is success
 
-- name: RedHat6 | Install Remi repo
+- name: RedHat | Install Remi repo
   ansible.builtin.yum:
-    name: http://rpms.remirepo.net/enterprise/remi-release-6.rpm
+    name: "http://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm"
     state: present
-  when: ansible_distribution_major_version == "6" and 'remi-release' not in ansible_facts.packages
-  register: pkg_result
-  until: pkg_result is success
-- name: RedHat7 | Install Remi repo
-  ansible.builtin.yum:
-    name: http://rpms.remirepo.net/enterprise/remi-release-7.rpm
-    state: present
-  when: ansible_distribution_major_version == "7" and 'remi-release' not in ansible_facts.packages
-  register: pkg_result
-  until: pkg_result is success
-- name: RedHat8 | Install Remi repo
-  ansible.builtin.yum:
-    name: http://rpms.remirepo.net/enterprise/remi-release-8.rpm
-    state: present
-  when: ansible_distribution_major_version == "8" and 'remi-release' not in ansible_facts.packages
+  when: "'remi-release' not in ansible_facts.packages"
   register: pkg_result
   until: pkg_result is success
 
