refactor(composer): use block/rescue to provide more information in case of failure (3)

--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -74,7 +74,8 @@
       become_user: "{{ www_user }}"
     - name: Composer global diagnose
       community.general.composer:
-        command: global diagnose
+        command: global
+        arguments: diagnose
         working_dir: "{{ misp_rootdir }}/app"
         executable: "{{ php_bin | default(omit) }}"
       register: pkg_result
