--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -25,6 +25,7 @@
     harden_php7_snuffleupagus_rules_template: '/tmp/kitchen/juju4.misp/templates/misp-snuffleupagus-rules.ini.j2'
     harden_apache_php_variants: ['apache2']
     harden_apache_php74_debian_enable: true
+    harden_apache_php74_rhel9_enable: true
     faup_virtualenv_path: "{{ misp_virtualenv }}"
     faup_virtualenv_user: "{{ www_user }}"
   pre_tasks:
