--- a/vars/RedHat-9.yml
+++ b/vars/RedHat-9.yml
@@ -78,7 +78,7 @@ misp_webserver_nginx:
 mysql_svc: mariadb
 rng_svc: "{% if (ansible_os_family == 'RedHat' and ansible_distribution_major_version | int >= 8) and ansible_virtualization_type is defined %}haveged{% else %}rngd{% endif %}"
 redis_svc: redis
-redis_conf: /etc/redis.conf
+redis_conf: /etc/redis/redis.conf
 misp_services:
  - "{{ apache_svc }}"
  - "{{ mysql_svc }}"
