--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -56,7 +56,7 @@
     - name: RedHat9 | Set fact
       ansible.builtin.set_fact:
         misp_mysql_user: 'root'
-        misp_mysql_pass: ''
+        misp_mysql_pass: 'root'
       when: (ansible_os_family == "RedHat" and ansible_distribution_major_version | int == 9)
   roles:
     - { role: juju4.redhat_epel, when: ansible_os_family == 'RedHat' }
