--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -115,8 +115,8 @@
 - name: Recover gpg key to check git signed commit
   ansible.builtin.command: "gpg --keyserver {{ misp_pgp_server }} --recv-keys {{ item }}"
   with_items: "{{ misp_git_signing_keys }}"
-  register: import
-  changed_when: "'imported: [1-9]+' in import.stdout"
+  register: import1
+  changed_when: "'imported: [1-9]+' in import1.stdout"
   when: not (misp_proxy_host is defined and misp_proxy_host)
 
 - name: Recover gpg key to check git signed commit - proxy
@@ -125,8 +125,8 @@
         --keyserver-options
         \"timeout=10 http-proxy={{ misp_proxy_scheme }}://{{ misp_proxy_host }}:{{ misp_proxy_port }}\"
   with_items: "{{ misp_git_signing_keys }}"
-  register: import
-  changed_when: "'imported: [1-9]+' in import.stdout"
+  register: import1
+  changed_when: "'imported: [1-9]+' in import1.stdout"
   when: misp_proxy_host is defined and misp_proxy_host
 
 - name: Git setup proxy
