fix: libjpeg8-dev is libjpeg-dev on Debian

--- a/vars/Debian-11.yml
+++ b/vars/Debian-11.yml
@@ -45,7 +45,7 @@ misp_pkg_list:
  - cron
  ## pillow
  - libtiff5-dev
- - libjpeg8-dev
+ - libjpeg-dev
  - zlib1g-dev
  - libfreetype6-dev
  ## if pyzmq?
