ci (kitchen): add debian 11/bullseye to the matrix

--- a/.github/workflows/default-kitchen.yml
+++ b/.github/workflows/default-kitchen.yml
@@ -30,6 +30,10 @@ jobs:
             version2: 8-Stream
             suite: default
             experimental: true
+          - distribution: debian
+            version: bullseye
+            suite: default
+            experimental: false
           - distribution: ubuntu
             version: '22.04'
             version2: 2204
