--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -18,15 +18,14 @@ jobs:
       max-parallel: 4
       matrix:
         include:
+          - molecule_distro: 'centos:7'
+            experimental: true    # SSL CERTIFICATE_VERIFY_FAILED remirepo
+          - molecule_ditro: 'debian:bullseye'
+            experimental: false
           - molecule_distro: 'rockylinux:9'
             experimental: true
           - molecule_distro: 'rockylinux:8'
             experimental: true
-          - molecule_distro: 'centos:7'
-            # SSL CERTIFICATE_VERIFY_FAILED remirepo
-            experimental: true
-          - molecule_ditro: 'debian:bullseye'
-            experimental: false
           - molecule_distro: 'ubuntu:22.04'
             experimental: true
           - molecule_distro: 'ubuntu:20.04'
