ci (kitchen): set "version2" for debian bullseye

--- a/.github/workflows/default-kitchen.yml
+++ b/.github/workflows/default-kitchen.yml
@@ -32,6 +32,7 @@ jobs:
             experimental: true
           - distribution: debian
             version: bullseye
+            version2: bullseye
             suite: default
             experimental: false
           - distribution: ubuntu
