kitchen (vagrant): add debian bullseye to platform

--- a/.kitchen.vagrant.yml
+++ b/.kitchen.vagrant.yml
@@ -28,6 +28,7 @@ platforms:
     driver_config:
       network:
         - ["forwarded_port", {guest: 80, host: 8589}]
+  - name: debian-bullseye
 
 suites:
   - name: default
