--- a/tasks/redhat-remi.yml
+++ b/tasks/redhat-remi.yml
@@ -37,7 +37,8 @@
 
 # https://github.com/ansible/ansible-modules-extras/issues/2384
 - name: Enable remi repository for php
-  ansible.builtin.command: "yum-config-manager --enable remi-php{{ php_remi_version }}"
+  ansible.builtin.command:  # noqa no-changed-when
+    cmd: "yum-config-manager --enable remi-php{{ php_remi_version }}"
   # yum_repository:
   #   name: remi-php56
   #   enable: yes
@@ -47,11 +48,13 @@
     - not ('enabled=1' in remistate.stdout)
 
 - name: RHEL8 | reset php stream to use remi latest
-  ansible.builtin.command: "dnf module reset php -y"
+  ansible.builtin.command:  # noqa no-changed-when
+    cmd: "dnf module reset php -y"
   when:
     - ansible_distribution_major_version | int >= 8
     - ansible_facts.packages['php-fpm'] is defined
     - ansible_facts.packages['php-fpm'][0]['version'] is version_compare('7.4', '<')
 - name: RHEL8 | enable remi repository for php
-  ansible.builtin.command: "dnf module enable php:remi-7.4 -y"
+  ansible.builtin.command:  # noqa no-changed-when
+    cmd: "dnf module enable php:remi-7.4 -y"
   when: ansible_distribution_major_version | int >= 8
