--- a/tasks/mysql-configure.yml
+++ b/tasks/mysql-configure.yml
@@ -74,9 +74,5 @@
         src: disable_strict_mode.cnf
         dest: /etc/mysql/conf.d/disable_strict_mode.cnf
         mode: 0644
-      register: mysqlstrict
-    - name: Restart mysql
-      ansible.builtin.service:
-        name: mysql
-        state: restarted
-      when: mysqlstrict.changed
+      notify:
+        - Restart mysql
