--- a/tasks/stix-cybox.yml
+++ b/tasks/stix-cybox.yml
@@ -42,3 +42,6 @@
   until: pkg_result is success
   become: yes
   become_user: "{{ www_user }}"
+  when:
+    # https://github.com/MISP/cti-python-stix2/blob/main/pyproject.toml
+    - ansible_python_version is version('3.7', '>=')
